<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/pad_40dp"
                android:text="@string/add_notes"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="@dimen/dim_22sp"/>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_note_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/pad_5dp"
            app:cardCornerRadius="@dimen/pad_5dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/pad_8dp"
                android:layout_marginTop="@dimen/pad_20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_title"
                    style="@style/material_et_style"
                    android:hint="@string/title"
                    android:singleLine="true"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_note_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/pad_5dp"
            app:cardCornerRadius="@dimen/pad_5dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/pad_8dp"
                android:layout_marginTop="@dimen/pad_20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_description"
                    style="@style/material_et_style"
                    android:hint="@string/take_notes"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:maxLines="8"
                    android:lines="10"
                    android:scrollbars="vertical"
                    android:gravity="top"/>

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>